k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: <ACR_LOGIN_SERVER>/votingapp/result:latest
        imagePullPolicy: Always
        name: result
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-secret
