k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: <ACR_LOGIN_SERVER>/votingapp/vote:latest
        imagePullPolicy: Always
        name: vote
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-secret
